gen/firebaserules/v1/cargo-errors.log
    Checking google-firebaserules1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/firebaserules/v1/lib)
error[E0107]: wrong number of type arguments: expected 0, found 2
   --> firebaserules/v1/lib/src/lib.rs:128:57
    |
128 |         fn serialize<S>(&self, serializer: S) -> Result<S::Ok, S::Error>
    |                                                         ^^^^^  ^^^^^^^^ unexpected type argument
    |                                                         |
    |                                                         unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 2
   --> firebaserules/v1/lib/src/lib.rs:136:54
    |
136 |         fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    |                                                      ^^^^  ^^^^^^^^ unexpected type argument
    |                                                      |
    |                                                      unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 2
   --> firebaserules/v1/lib/src/lib.rs:177:57
    |
177 |         fn serialize<S>(&self, serializer: S) -> Result<S::Ok, S::Error>
    |                                                         ^^^^^  ^^^^^^^^ unexpected type argument
    |                                                         |
    |                                                         unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 2
   --> firebaserules/v1/lib/src/lib.rs:185:54
    |
185 |         fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    |                                                      ^^^^  ^^^^^^^^ unexpected type argument
    |                                                      |
    |                                                      unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 2
   --> firebaserules/v1/lib/src/lib.rs:281:57
    |
281 |         fn serialize<S>(&self, serializer: S) -> Result<S::Ok, S::Error>
    |                                                         ^^^^^  ^^^^^^^^ unexpected type argument
    |                                                         |
    |                                                         unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 2
   --> firebaserules/v1/lib/src/lib.rs:289:54
    |
289 |         fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    |                                                      ^^^^  ^^^^^^^^ unexpected type argument
    |                                                      |
    |                                                      unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 2
   --> firebaserules/v1/lib/src/lib.rs:574:57
    |
574 |         fn serialize<S>(&self, serializer: S) -> Result<S::Ok, S::Error>
    |                                                         ^^^^^  ^^^^^^^^ unexpected type argument
    |                                                         |
    |                                                         unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 2
   --> firebaserules/v1/lib/src/lib.rs:582:54
    |
582 |         fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    |                                                      ^^^^  ^^^^^^^^ unexpected type argument
    |                                                      |
    |                                                      unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 2
   --> firebaserules/v1/lib/src/lib.rs:633:57
    |
633 |         fn serialize<S>(&self, serializer: S) -> Result<S::Ok, S::Error>
    |                                                         ^^^^^  ^^^^^^^^ unexpected type argument
    |                                                         |
    |                                                         unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 2
   --> firebaserules/v1/lib/src/lib.rs:641:54
    |
641 |         fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    |                                                      ^^^^  ^^^^^^^^ unexpected type argument
    |                                                      |
    |                                                      unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 2
   --> firebaserules/v1/lib/src/lib.rs:719:57
    |
719 |         fn serialize<S>(&self, serializer: S) -> Result<S::Ok, S::Error>
    |                                                         ^^^^^  ^^^^^^^^ unexpected type argument
    |                                                         |
    |                                                         unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 2
   --> firebaserules/v1/lib/src/lib.rs:727:54
    |
727 |         fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    |                                                      ^^^^  ^^^^^^^^ unexpected type argument
    |                                                      |
    |                                                      unexpected type argument

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0107`.
error: Could not compile `google-firebaserules1`.

To learn more, run the command again with --verbose.
